src/objects/Tickets__c.object
<CustomObject>
    <description>Enter issues for resolution</description>
    <fields>
        <fullName>Affected_Non_SF_User__c</fullName>
        <label>Affected Non SF User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Affected_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the Name of the affected Salesforce user.  This is important if someone enters the ticket on behalf of someone else.</inlineHelpText>
        <label>Affected User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Assign to a developer if it requires code or data update.</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tickets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bug__c</fullName>
        <label>Ticket Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Defect</fullName>
                    <color>#FF0000</color>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                    <color>#009900</color>
                </value>
                <value>
                    <fullName>EDI</fullName>
                    <color>#FF0000</color>
                </value>
                <value>
                    <fullName>Interface</fullName>
                    <color>#FF0000</color>
                </value>
                <value>
                    <fullName>Report</fullName>
                    <color>#009900</color>
                </value>
                <value>
                    <fullName>Conga Template</fullName>
                    <color>#009900</color>
                </value>
                <value>
                    <fullName>Support</fullName>
                    <color>#009900</color>
                </value>
                <value>
                    <fullName>Security</fullName>
                    <color>#009900</color>
                </value>
                <value>
                    <fullName>IT Initiative</fullName>
                    <color>#419249</color>
                </value>
                <value>
                    <fullName>Training</fullName>
                    <color>#009900</color>
                </value>
                <value>
                    <fullName>Data-Customer</fullName>
                    <color>#FF0000</color>
                </value>
                <value>
                    <fullName>Data-Contract</fullName>
                    <color>#FF0000</color>
                </value>
                <value>
                    <fullName>Data-Contract LDC</fullName>
                    <color>#FF0000</color>
                </value>
                <value>
                    <fullName>Data-LDC Account</fullName>
                    <color>#FF0000</color>
                </value>
                <value>
                    <fullName>Data-DASR</fullName>
                    <color>#FF0000</color>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>POR</fullName>
                </value>
                <value>
                    <fullName>Accelerated Switching</fullName>
                </value>
                <value>
                    <fullName>Test Case</fullName>
                </value>
                <value>
                    <fullName>UAT Issues</fullName>
                </value>
                <value>
                    <fullName>Bug</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Data</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Data-Lodestar</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Lodestar</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>On-Site Support</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Project</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Approved_Date__c</fullName>
        <description>Date Approved by Business</description>
        <inlineHelpText>Date Approved by the Business.  See Notes for approval.</inlineHelpText>
        <label>Business Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Process__c</fullName>
        <label>Business Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Request Pricing (Sales function)</fullName>
                </value>
                <value>
                    <fullName>2 - Pricing (Risk)</fullName>
                </value>
                <value>
                    <fullName>3 - Contract Creation (Sales)</fullName>
                </value>
                <value>
                    <fullName>4 - Accept Contract (Account Management)</fullName>
                </value>
                <value>
                    <fullName>5 - Account Set Up (Account Management)</fullName>
                </value>
                <value>
                    <fullName>6 - DASR (Account Management)</fullName>
                </value>
                <value>
                    <fullName>7 - Validation (Account Management)</fullName>
                </value>
                <value>
                    <fullName>8 - Integration</fullName>
                </value>
                <value>
                    <fullName>9 - EDI</fullName>
                </value>
                <value>
                    <fullName>10 - Billing</fullName>
                </value>
                <value>
                    <fullName>11 - Settlements</fullName>
                </value>
                <value>
                    <fullName>12 - Settlements UCB</fullName>
                </value>
                <value>
                    <fullName>13 - A/R</fullName>
                </value>
                <value>
                    <fullName>14 - Cash</fullName>
                </value>
                <value>
                    <fullName>15 - Reporting</fullName>
                </value>
                <value>
                    <fullName>16 - Brokers</fullName>
                </value>
                <value>
                    <fullName>17 - Billing Workflow</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Accept Contract (Account Management)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Account Set Up (Account Management)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Contract Creation (Sales)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>DASR (Account Management)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Pricing (Risk)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Request Pricing (Sales)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Validation (Account Management)</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to related a ticket to contract</description>
        <label>Contract Number</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Department that the user belongs to</description>
        <inlineHelpText>Department that the user belongs to</inlineHelpText>
        <label>Department</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Account Setup</fullName>
                </value>
                <value>
                    <fullName>Acc Mgt- residential</fullName>
                </value>
                <value>
                    <fullName>Biz Ops.</fullName>
                </value>
                <value>
                    <fullName>Settlements</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Business Operations</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>IT</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_In_UAT__c</fullName>
        <inlineHelpText>The date the ticket is due in UAT for testing.</inlineHelpText>
        <label>Due In UAT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours_Actual__c</fullName>
        <inlineHelpText>Number of hours actually spent</inlineHelpText>
        <label>Hours Actual</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Definitive_Est__c</fullName>
        <inlineHelpText>Hours Definitive Estimate.  It can be changed</inlineHelpText>
        <label>Hours Definitive Est</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_ROM__c</fullName>
        <inlineHelpText>Initial rough order of magnitude</inlineHelpText>
        <label>Hours ROM</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Remaining__c</fullName>
        <formula>Hours_Definitive_Est__c  -  Hours_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hours remaining for the task</inlineHelpText>
        <label>Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_Documentation__c</fullName>
        <inlineHelpText>This field is intended for IT to track documentation for a deliverable.</inlineHelpText>
        <label>IT Documentation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Required</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Produced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <inlineHelpText>The business defines the impact.  This means the impact of this ticket in regards to the number of users or the number of customers affected.  It usually drives the priority and the rank.</inlineHelpText>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Critical</fullName>
                </value>
                <value>
                    <fullName>2 - High</fullName>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                </value>
                <value>
                    <fullName>4 - Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Contract LDC</fullName>
                </value>
                <value>
                    <fullName>Contract Terms</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>DASR</fullName>
                </value>
                <value>
                    <fullName>LDC Account</fullName>
                </value>
                <value>
                    <fullName>LDC Vendors</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Validation</fullName>
                </value>
                <value>
                    <fullName>Conract LDC</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>LDC Vendor</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outage_Duration__c</fullName>
        <label>Outage Duration</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outage_Point__c</fullName>
        <inlineHelpText>Select the location where the outage is expected, if any.</inlineHelpText>
        <label>Outage Point</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>814 EDI Inbound</fullName>
                </value>
                <value>
                    <fullName>814 EDI Outbound</fullName>
                </value>
                <value>
                    <fullName>SF to LS Interface</fullName>
                </value>
                <value>
                    <fullName>Conga Template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planned_Dev_Start_Date__c</fullName>
        <inlineHelpText>The date planned to start development.</inlineHelpText>
        <label>Planned Dev Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>The priority established by the business.  There can be many top priority tickets, but not all can be resolved at once.  Please use the rank to distinguish which tickets need to be worked on first in the rank field.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Critical</fullName>
                </value>
                <value>
                    <fullName>2 - High</fullName>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                </value>
                <value>
                    <fullName>4 - Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <inlineHelpText>The rank defined by the business.  These are tickets to be worked on by IT according to the rank.  Other quick-win tickets will also be worked on.</inlineHelpText>
        <label>Rank</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCR_Target_Date__c</fullName>
        <label>SCR Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCR__c</fullName>
        <label>SCR</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_Number__c</fullName>
        <inlineHelpText>This task was logged in the SharePoint site during UAT and not resolved before Production go-live.</inlineHelpText>
        <label>SharePoint Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <inlineHelpText>Date of the last status.</inlineHelpText>
        <label>Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status set by IT, indicates were in the life cycle the ticket is.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Requires More Information</fullName>
                </value>
                <value>
                    <fullName>Pending Retail Review</fullName>
                </value>
                <value>
                    <fullName>Assigned Developer</fullName>
                </value>
                <value>
                    <fullName>Ready for Unit Testing</fullName>
                </value>
                <value>
                    <fullName>Unit Test Passed</fullName>
                </value>
                <value>
                    <fullName>Ready to Test</fullName>
                </value>
                <value>
                    <fullName>UAT passed</fullName>
                </value>
                <value>
                    <fullName>UAT Failed</fullName>
                </value>
                <value>
                    <fullName>Scheduled for Prod</fullName>
                </value>
                <value>
                    <fullName>Ready to Bill</fullName>
                </value>
                <value>
                    <fullName>Customer Call</fullName>
                </value>
                <value>
                    <fullName>Data Waiting for Contract</fullName>
                </value>
                <value>
                    <fullName>Need Bridge Contract</fullName>
                </value>
                <value>
                    <fullName>Returned to Account Set Up</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Pending LS Readiness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <inlineHelpText>Enter a brief description of the issue.</inlineHelpText>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <description>Application the Ticket pertains to</description>
        <label>System</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Workflow</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Lodestar</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>iAvenue</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>CES BLUE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TESTNUM__c</fullName>
        <label>TESTNUM</label>
        <precision>13</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Delivery_Date__c</fullName>
        <inlineHelpText>The data IT expects to deliver.</inlineHelpText>
        <label>Target Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Triage_Comments__c</fullName>
        <inlineHelpText>Business Triage Team enters comments for IT</inlineHelpText>
        <label>Triage Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <inlineHelpText>The user specifies the urgency to resolve the ticket.  Please specify why a ticket is considered &quot;1-Critical&quot;.  1-Critical means all other work needs to stop in order to resolve this ticket.</inlineHelpText>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Critical</fullName>
                    <color>#FF0000</color>
                </value>
                <value>
                    <fullName>2 - High</fullName>
                    <color>#FF9900</color>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                    <color>#F3D904</color>
                </value>
                <value>
                    <fullName>4 - Low</fullName>
                    <color>#0B6FCE</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Ticket_Number__c</fullName>
        <inlineHelpText>Used to track the ticket opened in the vendor&apos;s issue tracking system.  This number should be provided to the vendor when calling and working on an issue.</inlineHelpText>
        <label>Vendor Ticket Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Items__c</fullName>
        <description>This field is created to store the work items related to description of the ticket</description>
        <label>Work Items</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Work_Stream__c</fullName>
        <description>IT completes this section.  It helps group the tasks into work streams.</description>
        <label>Work Stream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Production Support</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pennsylvania</fullName>
                </value>
                <value>
                    <fullName>Broker Portal</fullName>
                </value>
                <value>
                    <fullName>Budget Billing</fullName>
                </value>
                <value>
                    <fullName>IT Initiatives</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Operational</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Phase I</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Phase II</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Ticket</label>
    <listViews>
        <fullName>Billing_Workflow</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Description__c</columns>
        <columns>Affected_User__c</columns>
        <columns>Assigned_Developer__c</columns>
        <columns>Status__c</columns>
        <columns>Urgency__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Account Setup</value>
        </filters>
        <filters>
            <field>System__c</field>
            <operation>equals</operation>
            <value>Billing Workflow</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Duplicate,Resolved</value>
        </filters>
        <label>Billing Workflow</label>
    </listViews>
    <listViews>
        <fullName>Billing_Workflow_ALL</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Description__c</columns>
        <columns>Affected_User__c</columns>
        <columns>Assigned_Developer__c</columns>
        <columns>Status__c</columns>
        <columns>Urgency__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Account Setup</value>
        </filters>
        <filters>
            <field>System__c</field>
            <operation>equals</operation>
            <value>Billing Workflow</value>
        </filters>
        <label>Billing Workflow - ALL</label>
    </listViews>
    <listViews>
        <fullName>Billing_Workflow_data</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Description__c</columns>
        <columns>Affected_User__c</columns>
        <columns>Assigned_Developer__c</columns>
        <columns>Status__c</columns>
        <columns>Urgency__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Account Setup</value>
        </filters>
        <filters>
            <field>System__c</field>
            <operation>equals</operation>
            <value>Billing Workflow</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Data Waiting for Contract</value>
        </filters>
        <label>Billing Workflow - data</label>
    </listViews>
    <listViews>
        <fullName>Customer_Call_Tickets</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Description__c</columns>
        <columns>Affected_User__c</columns>
        <columns>Assigned_Developer__c</columns>
        <columns>Urgency__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Account Setup</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Customer Call</value>
        </filters>
        <label>Customer Call Tickets</label>
    </listViews>
    <listViews>
        <fullName>PA_ALL</fullName>
        <columns>NAME</columns>
        <columns>Target_Delivery_Date__c</columns>
        <columns>Planned_Dev_Start_Date__c</columns>
        <columns>Due_In_UAT__c</columns>
        <columns>Assigned_Developer__c</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>Bug__c</columns>
        <columns>Hours_ROM__c</columns>
        <columns>Hours_Definitive_Est__c</columns>
        <columns>Hours_Actual__c</columns>
        <columns>Hours_Remaining__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tickets__c.PA_Expansion</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Duplicate,Resolved</value>
        </filters>
        <label>PA ALL</label>
    </listViews>
    <listViews>
        <fullName>PA_Due_Nov_1</fullName>
        <columns>NAME</columns>
        <columns>Target_Delivery_Date__c</columns>
        <columns>Planned_Dev_Start_Date__c</columns>
        <columns>Due_In_UAT__c</columns>
        <columns>Assigned_Developer__c</columns>
        <columns>Status__c</columns>
        <columns>Bug__c</columns>
        <columns>Description__c</columns>
        <columns>Hours_ROM__c</columns>
        <columns>Hours_Definitive_Est__c</columns>
        <columns>Hours_Actual__c</columns>
        <columns>Hours_Remaining__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tickets__c.PA_Expansion</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Duplicate</value>
        </filters>
        <filters>
            <field>Target_Delivery_Date__c</field>
            <operation>equals</operation>
            <value>11/1/2017</value>
        </filters>
        <label>PA Due Nov 1</label>
    </listViews>
    <listViews>
        <fullName>PA_Due_Nov_13</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Bug__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Scheduled for Prod</value>
        </filters>
        <label>PA Due Nov 13</label>
    </listViews>
    <listViews>
        <fullName>PA_UAT_TIX</fullName>
        <columns>NAME</columns>
        <columns>Target_Delivery_Date__c</columns>
        <columns>Planned_Dev_Start_Date__c</columns>
        <columns>Due_In_UAT__c</columns>
        <columns>Assigned_Developer__c</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>Bug__c</columns>
        <columns>Hours_ROM__c</columns>
        <columns>Hours_Definitive_Est__c</columns>
        <columns>Hours_Actual__c</columns>
        <columns>Hours_Remaining__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tickets__c.PA_Expansion</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Duplicate,Resolved</value>
        </filters>
        <filters>
            <field>Bug__c</field>
            <operation>equals</operation>
            <value>UAT Issues</value>
        </filters>
        <label>PA UAT Tix</label>
    </listViews>
</CustomObject>